format calendar.html

--- a/app/templates/calendar.html
+++ b/app/templates/calendar.html
@@ -13,77 +13,76 @@
                 <div class="lift content position-relative row bg-white text-center">
                     <div class="col">
                         <div class="row">
-                            <div class="col section-calendar-header bg-light text-center p-4">
-
+                            <div class="col section-calendar-header bg-light text-center p-4">\
                                 <div class="header" id="nav1" style="overflow:hidden;">
-                                            <div class="date-controls">
-                                                <table class="nav-table" cellpadding="0" cellspacing="0" border="0">
-                                                    <tbody>
-                                                        <tr>
-                                                            <td class="date-nav-buttons">
-                                                                <button class="today-button" id="todayButton1">
-                                                                    Today
-                                                                </button>
-                                                                <img id="navBack1" role="button" tabindex="0" title="Previous period" src="/static/images/left_arrow.png" width="22" height="17" class="navbutton navBack">
-                                                                <img id="navForward1" role="button" tabindex="0" title="Next period" src="/static/images/right_arrow.png" width="22" height="17" class="navbutton navForward">
-                                                            </td>
-                                                            <td id="dateEditableBox1" class="date-picker-off">
-                                                                <div class="date-top" id="currentDate1">
-                                                                    November 2019
-                                                                </div>
-                                                            </td>
-                                                            <td id="dateMenuArrow1" class="date-picker-off">
-                                                                <img src="https://calendar.google.com/googlecalendar/images/menu_arrow_open.gif" id="arrowImg1" class="arrowImg" width="9" height="9">
-                                                            </td>
-                                                            <td id="calendarTabs1">
-                                                                <table cellpadding="0" cellspacing="0">
-                                                                    <tbody>
-                                                                        <tr>
-                                                                            <td class="ui-rtsr">
-                                                                                <div class="ui-rtsr-unselected ui-rtsr-first-tab t1-embed">
-                                                                                    &nbsp;
-                                                                                </div>
-                                                                                <div class="ui-rtsr-unselected ui-rtsr-first-tab t2-embed">
-                                                                                    &nbsp;
-                                                                                </div>
-                                                                                <div id="tab-controller-container-week" class="ui-rtsr-unselected ui-rtsr-first-tab ui-rtsr-name">
-                                                                                    Week
-                                                                                </div>
-                                                                            </td>
-                                                                            <td class="ui-rtsr">
-                                                                                <div class="ui-rtsr-selected t1-embed">
-                                                                                    &nbsp;
-                                                                                </div>
-                                                                                <div class="ui-rtsr-selected t2-embed">
-                                                                                    &nbsp;
-                                                                                </div>
-                                                                                <div id="tab-controller-container-month" class="ui-rtsr-selected ui-rtsr-name">
-                                                                                    Month
-                                                                                </div>
-                                                                            </td>
-                                                                            <td class="ui-rtsr">
-                                                                                <div class="ui-rtsr-unselected ui-rtsr-last-tab t1-embed">
-                                                                                    &nbsp;
-                                                                                </div>
-                                                                                <div class="ui-rtsr-unselected ui-rtsr-last-tab t2-embed">
-                                                                                    &nbsp;
-                                                                                </div>
-                                                                                <div id="tab-controller-container-agenda" class="ui-rtsr-unselected ui-rtsr-last-tab ui-rtsr-name">
-                                                                                    Agenda
-                                                                                </div>
-                                                                            </td>
-                                                                        </tr>
-                                                                    </tbody>
-                                                                </table>
-                                                            </td>
-                                                            <td class="calendar-nav">
-                                                                <img id="calendarListButton1" src="https://calendar.google.com/googlecalendar/images/btn_menu6.gif" alt="" title="" width="15" height="14">
-                                                            </td>
-                                                        </tr>
-                                                    </tbody>
-                                                </table>
-                                            </div>
-                                        </div>
+                                    <div class="date-controls">
+                                        <table class="nav-table" cellpadding="0" cellspacing="0" border="0">
+                                            <tbody>
+                                                <tr>
+                                                    <td class="date-nav-buttons">
+                                                        <button class="today-button" id="todayButton1">
+                                                            Today
+                                                        </button>
+                                                        <img id="navBack1" role="button" tabindex="0" title="Previous period" src="/static/images/left_arrow.png" width="22" height="17" class="navbutton navBack">
+                                                        <img id="navForward1" role="button" tabindex="0" title="Next period" src="/static/images/right_arrow.png" width="22" height="17" class="navbutton navForward">
+                                                    </td>
+                                                    <td id="dateEditableBox1" class="date-picker-off">
+                                                        <div class="date-top" id="currentDate1">
+                                                            November 2019
+                                                        </div>
+                                                    </td>
+                                                    <td id="dateMenuArrow1" class="date-picker-off">
+                                                        <img src="https://calendar.google.com/googlecalendar/images/menu_arrow_open.gif" id="arrowImg1" class="arrowImg" width="9" height="9">
+                                                    </td>
+                                                    <td id="calendarTabs1">
+                                                        <table cellpadding="0" cellspacing="0">
+                                                            <tbody>
+                                                                <tr>
+                                                                    <td class="ui-rtsr">
+                                                                        <div class="ui-rtsr-unselected ui-rtsr-first-tab t1-embed">
+                                                                            &nbsp;
+                                                                        </div>
+                                                                        <div class="ui-rtsr-unselected ui-rtsr-first-tab t2-embed">
+                                                                            &nbsp;
+                                                                        </div>
+                                                                        <div id="tab-controller-container-week" class="ui-rtsr-unselected ui-rtsr-first-tab ui-rtsr-name">
+                                                                            Week
+                                                                        </div>
+                                                                    </td>
+                                                                    <td class="ui-rtsr">
+                                                                        <div class="ui-rtsr-selected t1-embed">
+                                                                            &nbsp;
+                                                                        </div>
+                                                                        <div class="ui-rtsr-selected t2-embed">
+                                                                            &nbsp;
+                                                                        </div>
+                                                                        <div id="tab-controller-container-month" class="ui-rtsr-selected ui-rtsr-name">
+                                                                            Month
+                                                                        </div>
+                                                                    </td>
+                                                                    <td class="ui-rtsr">
+                                                                        <div class="ui-rtsr-unselected ui-rtsr-last-tab t1-embed">
+                                                                            &nbsp;
+                                                                        </div>
+                                                                        <div class="ui-rtsr-unselected ui-rtsr-last-tab t2-embed">
+                                                                            &nbsp;
+                                                                        </div>
+                                                                        <div id="tab-controller-container-agenda" class="ui-rtsr-unselected ui-rtsr-last-tab ui-rtsr-name">
+                                                                            Agenda
+                                                                        </div>
+                                                                    </td>
+                                                                </tr>
+                                                            </tbody>
+                                                        </table>
+                                                    </td>
+                                                    <td class="calendar-nav">
+                                                        <img id="calendarListButton1" src="https://calendar.google.com/googlecalendar/images/btn_menu6.gif" alt="" title="" width="15" height="14">
+                                                    </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="row">
