rm typo '/' in calendar

--- a/app/templates/calendar.html
+++ b/app/templates/calendar.html
@@ -13,7 +13,7 @@
                 <div class="lift content position-relative row bg-white text-center">
                     <div class="col">
                         <div class="row">
-                            <div class="col section-calendar-header bg-light text-center p-4">\
+                            <div class="col section-calendar-header bg-light text-center p-4">
                                 <div class="header" id="nav1" style="overflow:hidden;">
                                     <div class="date-controls">
                                         <table class="nav-table" cellpadding="0" cellspacing="0" border="0">
