--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -192,6 +192,26 @@ table {
     font-size: 64px;
 }
 
+.alert_hide {
+    top: -130px;
+}
+
+.alert_show {
+    top: 0px;
+}
+
+.alert_flash {
+    top: -130px;
+    min-width: 400px !important;
+    height: 114px;
+    border-radius: 5px;
+    box-shadow: 2px 3px 15px rgb(128, 128, 128, 0.9);
+    transition: top 0.5s ease-in-out;
+    left: 50%;
+    margin-left: -200px;
+    z-index: 300;
+}
+
 .dropdown-toggle::after {
 
     border-top: 0.8em solid !important;
