--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,8 +30,14 @@
              crossorigin="anonymous">
         </script>
 
-        <script type="text/javascript" src="{{ url_for('static', filename='base.js') }}"></script>
 
+        <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.0/dist/jquery.validate.js">    
+        </script>
+
+        <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.0/dist/additional-methods.js">
+        </script>
+
+        <script type="text/javascript" src="{{ url_for('static', filename='base.js') }}"></script>
  
     </head>
     <body class="bg-dark">
